--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -19,6 +19,8 @@ h1 {
   letter-spacing: -5%;
 }
 
+
+
 .paragraph-17-reguler {
   font-family: "Inter", sans-serif;
   font-weight: 400;
@@ -28,12 +30,12 @@ h1 {
 }
 
 .desc-hero-screen {
-  font-family: "Albert Sans", sans-serif;
-  font-weight: 400;
-  font-style: Regular;
-  font-size: 2.188rem !important;
-  line-height: 120%;
-  letter-spacing: -1%;
+font-family: 'Albert Sans', sans-serif;
+font-weight: 400;
+font-style: Regular;
+font-size: 2.188rem !important;
+line-height: 120%;
+letter-spacing: -1%;
 }
 
 .h2-title {
